# old-language

./: .gitignore  CMakeLists.txt  Makefile  build.ninja  cleanup.sh
include/: liz.h
include/backend/vm/: instructions.h
include/frontend/: parser.h  tokenize.h
meta/: build.sh  clean.sh  cleanup.sh  runtests.sh
source/: main.cc
source/backend/vm/: instructions.cc
source/frontend/: parser.cc  tokenize.cc
source/tools/: lizasm.cc
test/syntax/: structures.liz  variables.liz
test/syntax/arith/: 01-adding-two-numbers.liz
test/syntax/structs/: 01-stub-structs.liz  02-basic-structs.liz
